# rag-ai-chatbot-example

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_KO.md  CHANGELOG_2026-05-14_cache_list_ux.md  Dockerfile  PROJECT_CONTEXT.md  README.md  alembic.ini  docker-compose.yml  exmatch-publickey.pem  exmatch_ai_codex_deploy_log.md  ingestion_guide_ko.md  pyproject.toml  requirements-api.txt  requirements.txt
alembic/: env.py
app/: __init__.py  db.py  main.py  models.py
docker/: entrypoint.sh
docs/: CHATBOT_ARCHITECTURE.md  CHATBOT_PROCESS_FLOW.md  RETRIEVAL_STEP4_TUNING.md  embedding_model_candidates.txt  kprint QA bot_초안.csv
embedding/: .env.example  Dockerfile  README.md  docker-compose.ec2-2.yml  embed_server.py  install_deps.sh  main.py  pipeline.py  qwen3_vl_embedding_upstream.py  requirements-core.txt  requirements-embed.txt  requirements-full-cuda.txt  requirements.txt  retrieval.py
main/: .env.example  docker-compose.ec2-1.yml  requirements.txt
main/app/: main.py  (+1 more)
new_main/: .env.example  Dockerfile  docker-compose.ec2-1.yml  nginx.conf
scripts/: __init__.py  deploy_ec2_all.sh  deploy_ec2_new_front.sh  embed_koba_qwen3_profile_evidence.py  embed_kprint_qwen3_profile_evidence.py  embed_new_company_qwen3_profile_evidence.py  faq_benchmark.py  ingest_db_env.py  ingest_koba_exhibit_items_2026.py  ingest_koba_exhibitors_2026.py  ingest_kprint_exhibit_items_2026.py  ingest_kprint_exhibitors_2026.py  injest_exhibitors_2026.py  kprint_ingest_ec2_main.sh  kprint_ingest_server.sh  load_kprint_qa_quickmenu.py  mock_ingest.py  sync_kprint_qwen3_embeddings.sh
(+302 files in other folders)
